--- a/package.json
+++ b/package.json
@@ -54,7 +54,11 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "three": "^0.165.0",
+    "@react-three/fiber": "^8.16.8",
+    "@react-three/drei": "^9.107.0",
+    "framer-motion": "^11.2.10"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -63,6 +67,7 @@
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/three": "^0.165.0"
   }
 }
