--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@types/three": "^0.165.0",
+    "@types/uuid": "^9.0.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "three": "^0.165.0",
