--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "rebuild": "rm -rf .next && next dev -p 9002"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
