--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "rebuild": "rm -rf .next && next dev -p 9003"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.23",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -33,6 +34,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "ai": "^3.2.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
