--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "@google/generative-ai": "^0.1.0"
   },
   "devDependencies": {
     "@react-three/drei": "^9.107.0",
