--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "embla-carousel-autoplay": "^8.1.5",
     "embla-carousel-react": "^8.1.5",
     "firebase": "^11.9.1",
+    "firebase-admin": "^12.1.1",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.475.0",
     "next": "14.2.3",
