--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.44",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^4.1.3",
+    "@huggingface/inference": "^4.13.5",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -50,14 +54,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "embla-carousel-autoplay": "^8.1.5",
     "embla-carousel-react": "^8.1.5",
     "framer-motion": "^11.2.10",
+    "groq-sdk": "^0.37.0",
     "lucide-react": "^0.475.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
+    "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -72,6 +79,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@types/uuid": "^9.0.8",
