--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^3.0.4",
     "@supabase/supabase-js": "^2.86.2",
     "@types/canvas-confetti": "^1.9.0",
     "@types/three": "^0.181.0",
