--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 9003",
+    "dev": "next dev -p 9005",
     "build": "next build",
-    "build:prod": "cross-env NODE_ENV=production next build",
+    "build:prod": "cross-env NODE_ENV=production next build && purgecss --css .next/static/css/*.css --content .next/server/app/**/*.html .next/static/chunks/app/**/*.js --output .next/static/css",
     "start": "next start -p 9003",
     "start:prod": "cross-env NODE_ENV=production next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
+    "test": "vitest",
     "clean": "rimraf .next",
     "rebuild": "npm run clean && npm run dev",
     "check": "npm run typecheck && npm run lint",
@@ -44,8 +44,11 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.2",
     "@types/canvas-confetti": "^1.9.0",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.8",
     "ai": "^5.0.107",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
@@ -74,15 +77,23 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@types/uuid": "^9.0.8",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/coverage-v8": "^4.0.16",
     "cross-env": "^7.0.3",
-    "postcss": "^8",
+    "jsdom": "^27.3.0",
+    "postcss": "^8.5.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^10.5.0",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-tsconfig-paths": "^6.0.3",
+    "vitest": "^4.0.16"
   }
 }
