--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "framer-motion": "^11.2.10",
     "groq-sdk": "^0.37.0",
     "lucide-react": "^0.475.0",
-    "next": "14.2.3",
+    "next": "^16.1.0",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "pdf-parse": "^2.4.5",
