--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.8",
     "ai": "^5.0.107",
+    "browser-image-compression": "^2.0.2",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
